--- a/role-packages-README.html
+++ b/role-packages-README.html
@@ -317,6 +317,7 @@ runtime using the <code class="docutils literal"><span class="pre">include_vars<
   <span class="p p-Indicator">-</span> <span class="l l-Scalar l-Scalar-Plain">curl</span>
   <span class="p p-Indicator">-</span> <span class="l l-Scalar l-Scalar-Plain">wget</span>
   <span class="p p-Indicator">-</span> <span class="l l-Scalar l-Scalar-Plain">python-selinux</span>
+  <span class="p p-Indicator">-</span> <span class="l l-Scalar l-Scalar-Plain">python3-venv</span>
   <span class="c1"># - ntopng</span>
 </pre></div>
 </div>
